--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#FF4561</color>
     <color name="textColor">#565677</color>
+    <color name="backgroundColor">#FEF1E0</color>
+    <color name="wordBackground">#C846DCE0</color>
 </resources>
